--- a/Elaborato-2021.tex
+++ b/Elaborato-2021.tex
@@ -130,6 +130,12 @@
     Il sistema è composto da un contenitore di materiale isolante con la faccia superiore di vetro trasparente che permette alla luce solare di irradiare energia all'interno. La luce solare viene inoltre riflessa da due specchi posti ai lati opposti della faccia superiore (in particolare il lato superiore e quello inferiore).\\
     L'intera struttura è solidale ad una base girevole, controllata da un motore, che permette la regolazione dell'azimuth, mentre l'inclinazione di ogni specchio è regolata singolarmente in funzione dell'elevazione del sole.
     
+    \begin{figure}[h]
+    \centering
+        \includegraphics[width=380pt]{Draws/3D_render_cut.png}
+        \caption{Modello generico struttura di base}
+    \end{figure}
+    
 \section{Schema a blocchi}
 
 
